<resources>
    <string name="app_name">News App</string>
    <string name="nuntium">Nuntium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_to_know">First to know</string>
    <string name="next">Next</string>
    <string name="all_news_text">All news in one place, be the first to know last news</string>
    <string name="get_started">Get Started</string>
    <string name="select_your_favorite_topics">Select your favorite topics</string>
    <string name="select_topics_text">Select some of your topics to let us suggest better news for you</string>
    <string name="browse">Browse</string>
    <string name="categories">Categories</string>
    <string name="thousands_of_articles_in_each_category">Thousands of articles in each category</string>
    <string name="discover_things_of_this_world">Discover things of this world</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="sports">Sports</string>
    <string name="gaming">Gaming</string>
    <string name="you_have_not_text">You haven\'t saved any articles yet. Start reading and bookmarking them now</string>
    <string name="saved_articles_to_the_library">Saved articles to the library</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="us_election">US Election</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="night_mode">Night mode</string>
</resources>