<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/browse"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/discover_things_of_this_world"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_edit_text"
        android:drawableEnd="@drawable/speaker_icon"
        android:drawablePadding="10dp"
        android:hint="@string/search"
        android:paddingStart="55dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView8" />

    <androidx.appcompat.widget.AppCompatImageView
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/btnSearch"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/search_icon"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRandom"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/grey"
        android:text="@string/random"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSports"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/grey"
        android:text="@string/sports"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/btnRandom"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGaming"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/grey"
        android:text="@string/gaming"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/btnSports"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="284dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

</androidx.constraintlayout.widget.ConstraintLayout>