<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".presentation.fragment.saved.SavedFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bookmarks"
        android:textColor="@color/black"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/saved_articles_to_the_library"
        android:textSize="22sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="55dp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:id="@+id/btnFab"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/saved_icon"/>


            <TextView
                android:id="@+id/textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/you_have_not_text"
                android:textSize="22sp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>